feat: Complete CICD pipeline with Jenkins, SonarQube, Nexus, Docker Hub, Kubernetes