@@ -6,552 +6,337 @@ pipeline {
         maven 'Maven3'
     }
     
-    triggers {
-        pollSCM('H/5 * * * *')
-    }
-    
     environment {
-        DOCKERHUB_CREDENTIALS = credentials('dockerhub-creds')
+        // Infrastructure URLs
+        NEXUS_URL = '3.110.226.20'
+        SONARQUBE_URL = '13.203.26.99'
+        JENKINS_URL = '3.110.149.188'
+        
+        // Use Docker Hub instead of Nexus Docker registry
+        DOCKER_REGISTRY = "docker.io"
+        DOCKER_NAMESPACE = "saifudheenpv"  // Replace with your Docker Hub username
+        NEXUS_REPO_URL = "${NEXUS_URL}:8081"
+        
+        // Repository Names
+        MAVEN_REPO_NAME = "maven-releases"
+        
+        // Credentials
+        KUBECONFIG = credentials('kubeconfig')
         SONAR_TOKEN = credentials('sonar-token')
+        NEXUS_CREDS = credentials('nexus-creds')  // For Maven artifacts only
+        DOCKER_CREDS = credentials('docker-token') // Your Docker Hub credentials
+        GITHUB_CREDS = credentials('github-token')
         
-        REGISTRY = 'saifudheenpv'
+        // Application Configuration
         APP_NAME = 'hotel-booking-system'
-        VERSION = "${env.BUILD_NUMBER}"
-        SONAR_URL = 'http://13.233.38.12:9000'
-        
+        APP_VERSION = "${env.BUILD_ID}"
         K8S_NAMESPACE = 'hotel-booking'
-        TEST_PROFILE = 'test'
-        CLUSTER_IP = '13.203.79.80'
-        NODE_PORT = '32189'
-    }
-    
-    options {
-        buildDiscarder(logRotator(numToKeepStr: '10'))
-        timeout(time: 30, unit: 'MINUTES')
-        disableConcurrentBuilds()
-        skipDefaultCheckout(false)
-        timestamps()
+        
+        // Maven Configuration
+        MAVEN_OPTS = '-Xmx1024m -XX:MaxPermSize=256m'
     }
     
     stages {
-        stage('Clean Workspace') {
+        // STAGE 1: CODE CHECKOUT FROM GITHUB
+        stage('GitHub Checkout') {
             steps {
-                cleanWs()
+                echo "📦 Checking out code from GitHub repository..."
+                git branch: 'main', 
+                url: 'https://github.com/saifudheenpv/Hotel-Booking-System.git',
+                credentialsId: 'github-token'
+                
                 sh '''
-                    echo "🚀 Starting Fresh Build - Hotel Booking System"
-                    echo "Build Number: ${BUILD_NUMBER}"
+                    echo "=== CODE CHECKOUT COMPLETED ==="
+                    echo "Repository: Hotel-Booking-System"
+                    echo "Branch: main"
+                    echo "Build ID: ${BUILD_ID}"
+                    ls -la
                 '''
             }
         }
         
-        stage('Checkout Code') {
+        // STAGE 2: MAVEN COMPILE
+        stage('Maven Compile') {
             steps {
-                checkout scm
-                sh '''
-                    echo "📦 Git Repository Information"
-                    git log -1 --oneline
-                    echo "Branch: ${GIT_BRANCH}"
-                '''
+                echo "🔨 Compiling source code with Maven..."
+                sh 'mvn compile -DskipTests'
+                
+                sh 'echo "✅ Code compilation completed successfully"'
             }
         }
         
-        stage('Validate K8s Manifests') {
+        // STAGE 3: UNIT TESTS EXECUTION
+        stage('Unit Tests') {
             steps {
-                sh '''
-                    echo "🔍 Validating Kubernetes Manifests"
-                    
-                    # Check if all required files exist
-                    for file in k8s/*.yaml; do
-                        if [ -f "$file" ]; then
-                            echo "✅ Found: $file"
-                        else
-                            echo "❌ Missing: $file"
-                        fi
-                    done
-                    
-                    # Validate YAML syntax
-                    for file in k8s/*.yaml; do
-                        echo "Validating $file"
-                        kubectl apply --dry-run=client -f "$file" && echo "✅ $file valid" || echo "⚠️ Validation issues in $file"
-                    done
-                '''
-            }
-        }
-        
-        stage('Clean Docker Environment') {
-            steps {
-                sh '''
-                    echo "🧹 Cleaning Docker Environment"
-                    docker system prune -f --volumes || echo "Docker cleanup completed"
-                '''
-            }
-        }
-        
-        stage('Compile & Test') {
-            steps {
-                sh """
-                    echo "🔨 Compiling Source Code"
-                    mvn clean compile -q
-                    echo "✅ Compilation successful"
-                    
-                    echo "🧪 Running Unit Tests"
-                    mvn test -Dspring.profiles.active=${TEST_PROFILE}
-                    
-                    echo "📊 Generating Test Reports"
-                    mvn jacoco:report
-                """
+                echo "🧪 Running unit tests with Maven..."
+                sh 'mvn test -Dspring.profiles.active=test'
             }
             post {
                 always {
-                    junit 'target/surefire-reports/**/*.xml'
-                    archiveArtifacts 'target/site/jacoco/jacoco.xml'
+                    echo "📊 Publishing test results..."
+                    junit 'target/surefire-reports/*.xml'
+                    
+                    sh '''
+                        echo "=== TEST RESULTS ==="
+                        find target/surefire-reports -name "*.txt" -exec echo "Test File: {}" \\;
+                    '''
+                }
+                success {
+                    echo "✅ All tests passed!"
+                }
+                failure {
+                    echo "❌ Tests failed! Check test reports."
+                    error("Unit tests failed - check test reports")
                 }
             }
         }
         
-        stage('Security Scan - Code') {
-            steps {
-                sh '''
-                    echo "🔒 Running Security Scan on Source Code"
-                    trivy fs . --severity HIGH,CRITICAL --exit-code 0 --format table --no-progress
-                '''
-            }
-        }
-        
+        // STAGE 4: SONARQUBE CODE QUALITY
         stage('SonarQube Analysis') {
             steps {
-                withSonarQubeEnv('Sonar-Server') {
+                echo "🔍 Running SonarQube code analysis..."
+                withSonarQubeEnv('sonarqube-server') {
                     sh """
-                        mvn sonar:sonar \
-                        -Dsonar.projectKey=hotel-booking-system \
-                        -Dsonar.projectName='Hotel Booking System' \
-                        -Dsonar.host.url=${SONAR_URL} \
-                        -Dsonar.login=${SONAR_TOKEN} \
-                        -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
-                        -Dsonar.java.coveragePlugin=jacoco \
-                        -Dsonar.sourceEncoding=UTF-8
+                    mvn sonar:sonar \
+                      -Dsonar.projectKey=hotel-booking-system \
+                      -Dsonar.projectName='Hotel Booking System' \
+                      -Dsonar.host.url=http://${SONARQUBE_URL}:9000 \
+                      -Dsonar.login=${SONAR_TOKEN} \
+                      -Dsonar.coverage.jacoco.xmlReportPaths=target/site/jacoco/jacoco.xml \
+                      -Dsonar.java.binaries=target/classes \
+                      -Dsonar.sourceEncoding=UTF-8
                     """
                 }
             }
         }
         
+        // STAGE 5: QUALITY GATE CHECK
         stage('Quality Gate') {
             steps {
-                timeout(time: 5, unit: 'MINUTES') {
+                echo "🚦 Checking SonarQube Quality Gate..."
+                timeout(time: 10, unit: 'MINUTES') {
                     waitForQualityGate abortPipeline: true
                 }
+                echo "✅ Quality Gate passed!"
             }
         }
         
-        stage('Build & Package') {
+        // STAGE 6: DEPENDENCY CHECK (OWASP)
+        stage('Dependency Check') {
             steps {
+                echo "🔒 Running OWASP Dependency Check..."
                 sh '''
-                    echo "📦 Building Application Package"
-                    mvn clean package -DskipTests -q
-                    echo "✅ Generated Artifacts:"
-                    ls -la target/*.jar
+                    mvn org.owasp:dependency-check-maven:check \
+                    -DskipTests \
+                    -Dformat=HTML \
+                    -Dformat=XML
                 '''
-                archiveArtifacts 'target/*.jar'
+                
+                dependencyCheckPublisher pattern: '**/dependency-check-report.xml'
             }
-        }
-        
-        stage('Docker Build') {
-            steps {
-                script {
-                    echo "🐳 Building Docker Image"
-                    docker.build("${REGISTRY}/${APP_NAME}:${VERSION}")
-                    echo "✅ Docker image built: ${REGISTRY}/${APP_NAME}:${VERSION}"
-                    
-                    // Basic image verification
-                    sh """
-                        echo "🔍 Basic image verification..."
-                        docker image inspect ${REGISTRY}/${APP_NAME}:${VERSION} > /dev/null && echo "✅ Image exists and is valid"
-                    """
+            post {
+                always {
+                    echo "📋 OWASP Dependency check completed."
                 }
             }
         }
         
-        stage('Security Scan - Docker Image') {
+        // STAGE 7: MAVEN BUILD PACKAGE
+        stage('Maven Build Package') {
             steps {
-                sh """
-                    echo "🔒 Scanning Docker Image for Vulnerabilities"
-                    trivy image --exit-code 0 --severity HIGH,CRITICAL --no-progress ${REGISTRY}/${APP_NAME}:${VERSION}
-                """
+                echo "📦 Building application package..."
+                sh 'mvn clean package -DskipTests'
+                
+                echo "✅ Application packaged successfully!"
+                archiveArtifacts 'target/*.jar'
+                
+                sh '''
+                    echo "=== BUILD ARTIFACTS ==="
+                    ls -la target/*.jar
+                    echo "JAR File: target/${APP_NAME}-*.jar"
+                '''
             }
         }
         
+        // STAGE 8: NEXUS ARTIFACT PUBLISH (Maven only)
+        stage('Nexus Publish Artifact') {
+            steps {
+                echo "📤 Publishing Maven artifact to Nexus..."
+                script {
+                    // Get the actual JAR file name
+                    def jarFile = sh(script: 'ls target/*.jar', returnStdout: true).trim()
+                    
+                    nexusArtifactUploader(
+                        nexusVersion: 'nexus3',
+                        protocol: 'http',
+                        nexusUrl: "${NEXUS_REPO_URL}",
+                        groupId: 'com.hotel',
+                        version: "${APP_VERSION}",
+                        repository: "${MAVEN_REPO_NAME}",
+                        credentialsId: 'nexus-creds',
+                        artifacts: [
+                            [artifactId: "${APP_NAME}",
+                             classifier: '',
+                             file: "${jarFile}",
+                             type: 'jar']
+                        ]
+                    )
+                }
+                echo "✅ Maven artifact published to Nexus successfully!"
+            }
+        }
+        
+        // STAGE 9: DOCKER BUILD AND TAG (Using Docker Hub)
+        stage('Docker Build and Tag') {
+            steps {
+                echo "🐳 Building Docker image for Docker Hub..."
+                script {
+                    // Login to Docker Hub
+                    sh """
+                    docker login -u ${DOCKER_CREDS_USR} -p ${DOCKER_CREDS_PSW}
+                    """
+                    
+                    // Build Docker image
+                    sh """
+                    docker build -t ${DOCKER_NAMESPACE}/${APP_NAME}:${APP_VERSION} .
+                    docker tag ${DOCKER_NAMESPACE}/${APP_NAME}:${APP_VERSION} ${DOCKER_NAMESPACE}/${APP_NAME}:latest
+                    """
+                    
+                    echo "✅ Docker image built and tagged successfully!"
+                    sh "docker images | grep ${APP_NAME}"
+                }
+            }
+        }
+        
+        // STAGE 10: TRIVY DOCKER IMAGE SCAN
+        stage('Trivy Security Scan') {
+            steps {
+                echo "🔍 Running Trivy security scan on Docker image..."
+                script {
+                    // Install trivy if not present
+                    sh '''
+                    if ! command -v trivy &> /dev/null; then
+                        echo "Installing Trivy..."
+                        wget https://github.com/aquasecurity/trivy/releases/download/v0.45.1/trivy_0.45.1_Linux-64bit.deb
+                        sudo dpkg -i trivy_0.45.1_Linux-64bit.deb
+                    fi
+                    '''
+                    
+                    // Run security scan
+                    sh """
+                    # Generate HTML report
+                    trivy image --format template --template "@contrib/gitlab.tpl" --output trivy-security-report.html ${DOCKER_NAMESPACE}/${APP_NAME}:${APP_VERSION}
+                    
+                    # Fail build on critical vulnerabilities
+                    trivy image --exit-code 1 --severity CRITICAL ${DOCKER_NAMESPACE}/${APP_NAME}:${APP_VERSION}
+                    """
+                    
+                    echo "✅ Security scan completed!"
+                }
+            }
+        }
+        
+        // STAGE 11: DOCKER PUSH TO DOCKER HUB
         stage('Docker Push') {
             steps {
+                echo "📤 Pushing Docker image to Docker Hub..."
                 script {
-                    echo "📤 Pushing Docker Image to Registry"
-                    docker.withRegistry('', 'dockerhub-creds') {
-                        docker.image("${REGISTRY}/${APP_NAME}:${VERSION}").push()
-                    }
-                    echo "✅ Docker image pushed: ${REGISTRY}/${APP_NAME}:${VERSION}"
-                    
-                    // Also tag as latest
                     sh """
-                        docker tag ${REGISTRY}/${APP_NAME}:${VERSION} ${REGISTRY}/${APP_NAME}:latest
+                    docker push ${DOCKER_NAMESPACE}/${APP_NAME}:${APP_VERSION}
+                    docker push ${DOCKER_NAMESPACE}/${APP_NAME}:latest
                     """
-                    docker.withRegistry('', 'dockerhub-creds') {
-                        docker.image("${REGISTRY}/${APP_NAME}:latest").push()
-                    }
-                    echo "✅ Latest tag also pushed"
+                    
+                    echo "✅ Docker images pushed to Docker Hub successfully!"
+                    sh "echo 'Images available at: https://hub.docker.com/r/${DOCKER_NAMESPACE}/${APP_NAME}'"
                 }
             }
         }
         
-        stage('Infrastructure Setup') {
+        // STAGE 12: DEPLOY TO KUBERNETES
+        stage('Deploy to Kubernetes') {
             steps {
+                echo "🚀 Deploying to Kubernetes cluster..."
                 script {
-                    withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG_FILE')]) {
-                        sh """
-                            export KUBECONFIG=\${KUBECONFIG_FILE}
-                            
-                            echo "🏗️ Setting up Kubernetes Infrastructure"
-                            
-                            # Create namespace
-                            kubectl create namespace ${K8S_NAMESPACE} --dry-run=client -o yaml | kubectl apply -f -
-                            
-                            # Setup MySQL database
-                            echo "🗄️ Deploying MySQL Database"
-                            kubectl apply -f k8s/mysql-secret.yaml -n ${K8S_NAMESPACE}
-                            kubectl apply -f k8s/mysql-configmap.yaml -n ${K8S_NAMESPACE}
-                            kubectl apply -f k8s/mysql-pvc.yaml -n ${K8S_NAMESPACE}
-                            kubectl apply -f k8s/mysql-deployment.yaml -n ${K8S_NAMESPACE}
-                            kubectl apply -f k8s/mysql-service.yaml -n ${K8S_NAMESPACE}
-                            
-                            # Wait for MySQL to be ready
-                            echo "⏳ Waiting for MySQL to be ready..."
-                            if kubectl wait --for=condition=ready pod -l app=mysql -n ${K8S_NAMESPACE} --timeout=300s; then
-                                echo "✅ MySQL is ready"
-                                
-                                # Test MySQL connection
-                                echo "🔍 Testing MySQL connection..."
-                                sleep 10
-                                MYSQL_POD=\$(kubectl get pods -n ${K8S_NAMESPACE} -l app=mysql -o jsonpath='{.items[0].metadata.name}')
-                                if kubectl exec -n ${K8S_NAMESPACE} \$MYSQL_POD -- mysql -u hotel_user -pHotel@123 -e "SHOW DATABASES;" hotel_booking_system; then
-                                    echo "✅ MySQL connection successful"
-                                else
-                                    echo "⚠️ MySQL connection test failed, but continuing deployment..."
-                                fi
-                            else
-                                echo "❌ MySQL failed to start"
-                                kubectl logs -n ${K8S_NAMESPACE} -l app=mysql
-                                exit 1
-                            fi
-                        """
-                    }
+                    // Create namespace
+                    sh """
+                    kubectl apply -f k8s/namespace.yaml
+                    """
+                    
+                    // Deploy MySQL
+                    sh """
+                    kubectl apply -f k8s/mysql-deployment.yaml -n ${K8S_NAMESPACE}
+                    kubectl apply -f k8s/mysql-service.yaml -n ${K8S_NAMESPACE}
+                    """
+                    
+                    // Wait for MySQL
+                    sh """
+                    echo "⏳ Waiting for MySQL to be ready..."
+                    for i in {1..30}; do
+                        if kubectl get pods -n ${K8S_NAMESPACE} -l app=mysql | grep -q Running; then
+                            echo "✅ MySQL is ready!"
+                            break
+                        fi
+                        echo "⏱️ Waiting for MySQL... (attempt \$i/30)"
+                        sleep 10
+                    done
+                    """
+                    
+                    // Update deployment with current image tag
+                    sh """
+                    sed -i 's|image:.*|image: ${DOCKER_NAMESPACE}/${APP_NAME}:${APP_VERSION}|g' k8s/app-deployment-blue.yaml
+                    """
+                    
+                    // Deploy application
+                    sh """
+                    kubectl apply -f k8s/app-deployment-blue.yaml -n ${K8S_NAMESPACE}
+                    kubectl apply -f k8s/app-service.yaml -n ${K8S_NAMESPACE}
+                    """
+                    
+                    echo "✅ Application deployed to Kubernetes!"
                 }
             }
         }
         
-        stage('Blue-Green Deployment') {
+        // STAGE 13: POST-DEPLOYMENT VERIFICATION
+        stage('Health Check & Verification') {
             steps {
+                echo "🏥 Running health checks..."
                 script {
-                    withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG_FILE')]) {
-                        // Determine deployment strategy
-                        def deploymentInfo = sh(
-                            script: """
-                                export KUBECONFIG=\${KUBECONFIG_FILE}
-                                
-                                # Get deployment status
-                                BLUE_READY=\$(kubectl get deployment hotel-booking-system-blue -n ${K8S_NAMESPACE} --ignore-not-found -o jsonpath='{.status.readyReplicas}' 2>/dev/null || echo "0")
-                                GREEN_READY=\$(kubectl get deployment hotel-booking-system-green -n ${K8S_NAMESPACE} --ignore-not-found -o jsonpath='{.status.readyReplicas}' 2>/dev/null || echo "0")
-                                
-                                echo "Blue replicas: \$BLUE_READY"
-                                echo "Green replicas: \$GREEN_READY"
-                                
-                                # Determine target
-                                if [ "\$BLUE_READY" -eq "0" ] && [ "\$GREEN_READY" -eq "0" ]; then
-                                    echo "blue:green:first"
-                                elif [ "\$BLUE_READY" -gt "0" ]; then
-                                    echo "green:blue:switch"
-                                else
-                                    echo "blue:green:switch"
-                                fi
-                            """,
-                            returnStdout: true
-                        ).trim().readLines().last()
-                        
-                        def (TARGET_DEPLOYMENT, OLD_DEPLOYMENT, DEPLOYMENT_TYPE) = deploymentInfo.tokenize(':')
-                        
-                        env.TARGET_DEPLOYMENT = TARGET_DEPLOYMENT
-                        env.OLD_DEPLOYMENT = OLD_DEPLOYMENT
-                        
-                        echo "🎯 Deployment Strategy: ${DEPLOYMENT_TYPE}"
-                        echo "🎯 Target Deployment: ${TARGET_DEPLOYMENT}"
-                        echo "🎯 Old Deployment: ${OLD_DEPLOYMENT}"
-                        
-                        // Deploy to target environment
-                        sh """
-                            export KUBECONFIG=\${KUBECONFIG_FILE}
-                            
-                            echo "🚀 Deploying Version ${VERSION} to ${TARGET_DEPLOYMENT}"
-                            
-                            # Update deployment with new image using sed
-                            sed -i "s|image:.*|image: ${REGISTRY}/${APP_NAME}:${VERSION}|g" k8s/app-deployment-${TARGET_DEPLOYMENT}.yaml
-                            
-                            # Apply target deployment
-                            kubectl apply -f k8s/app-deployment-${TARGET_DEPLOYMENT}.yaml -n ${K8S_NAMESPACE}
-                            kubectl apply -f k8s/app-service-${TARGET_DEPLOYMENT}.yaml -n ${K8S_NAMESPACE}
-                            
-                            # Wait for rollout
-                            echo "⏳ Waiting for ${TARGET_DEPLOYMENT} deployment to complete..."
-                            if kubectl rollout status deployment/hotel-booking-system-${TARGET_DEPLOYMENT} -n ${K8S_NAMESPACE} --timeout=300s; then
-                                echo "✅ ${TARGET_DEPLOYMENT} deployment completed successfully"
-                            else
-                                echo "❌ ${TARGET_DEPLOYMENT} deployment failed"
-                                echo "📋 Debug information:"
-                                kubectl get pods -n ${K8S_NAMESPACE} -l app=hotel-booking-system,version=${TARGET_DEPLOYMENT}
-                                kubectl describe deployment/hotel-booking-system-${TARGET_DEPLOYMENT} -n ${K8S_NAMESPACE}
-                                kubectl logs -n ${K8S_NAMESPACE} -l app=hotel-booking-system,version=${TARGET_DEPLOYMENT} --tail=50
-                                exit 1
-                            fi
-                        """
-                    }
-                }
-            }
-        }
-        
-        stage('Health Check & Validation') {
-            steps {
-                script {
-                    withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG_FILE')]) {
-                        sh """
-                            export KUBECONFIG=\${KUBECONFIG_FILE}
-                            
-                            echo "🏥 Performing Health Checks on ${env.TARGET_DEPLOYMENT}"
-                            
-                            # Wait for pods to be ready
-                            echo "⏳ Waiting for ${env.TARGET_DEPLOYMENT} pods to be ready..."
-                            kubectl wait --for=condition=ready pod -l app=hotel-booking-system,version=${env.TARGET_DEPLOYMENT} -n ${K8S_NAMESPACE} --timeout=300s
-                            
-                            echo "✅ ${env.TARGET_DEPLOYMENT} pods are ready"
-                            
-                            # Test internal health check
-                            echo "🔍 Testing internal application health..."
-                            POD_NAME=\$(kubectl get pods -n ${K8S_NAMESPACE} -l app=hotel-booking-system,version=${env.TARGET_DEPLOYMENT} -o jsonpath='{.items[0].metadata.name}')
-                            
-                            if [ -n "\$POD_NAME" ]; then
-                                for i in 1 2 3 4 5; do
-                                    if kubectl exec -n ${K8S_NAMESPACE} "\$POD_NAME" -- curl -f -s http://localhost:8080/actuator/health > /dev/null; then
-                                        echo "✅ ${env.TARGET_DEPLOYMENT} internal health check PASSED on attempt \$i"
-                                        break
-                                    else
-                                        echo "⏳ Attempt \$i: ${env.TARGET_DEPLOYMENT} internal health check failed, waiting 5s..."
-                                        sleep 5
-                                        if [ \$i -eq 5 ]; then
-                                            echo "⚠️ ${env.TARGET_DEPLOYMENT} internal health check failed after 5 attempts, but continuing..."
-                                        fi
-                                    fi
-                                done
-                            else
-                                echo "❌ No pods found for ${env.TARGET_DEPLOYMENT}"
-                                exit 1
-                            fi
-                        """
-                    }
-                }
-            }
-        }
-        
-        stage('Update Main Service & Ingress') {
-            steps {
-                script {
-                    withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG_FILE')]) {
-                        sh """
-                            export KUBECONFIG=\${KUBECONFIG_FILE}
-                            
-                            echo "🔄 Updating Main Service to point to ${env.TARGET_DEPLOYMENT}"
-                            
-                            # Update main service selector
-                            sed -i "s/version:.*/version: ${env.TARGET_DEPLOYMENT}/g" k8s/app-service.yaml
-                            
-                            # Apply main service
-                            kubectl apply -f k8s/app-service.yaml -n ${K8S_NAMESPACE}
-                            
-                            # Apply ingress
-                            kubectl apply -f k8s/app-ingress.yaml -n ${K8S_NAMESPACE}
-                            
-                            echo "✅ Main service updated to ${env.TARGET_DEPLOYMENT}"
-                            
-                            # Wait for services to be ready
-                            echo "⏳ Waiting for services to be ready..."
-                            sleep 20
-                            
-                            # Scale down old deployment
-                            echo "📉 Scaling down previous deployment (${env.OLD_DEPLOYMENT})"
-                            kubectl scale deployment/hotel-booking-system-${env.OLD_DEPLOYMENT} -n ${K8S_NAMESPACE} --replicas=0
-                            
-                            echo "✅ ${env.OLD_DEPLOYMENT} scaled down to zero replicas"
-                        """
-                    }
-                }
-            }
-        }
-        
-        stage('Final Verification & URLs') {
-            steps {
-                script {
-                    withCredentials([file(credentialsId: 'kubeconfig', variable: 'KUBECONFIG_FILE')]) {
-                        sh """
-                            export KUBECONFIG=\${KUBECONFIG_FILE}
-                            
-                            echo "🎉 FINAL DEPLOYMENT VERIFICATION"
-                            echo "=========================================="
-                            
-                            # Get NodePort URL (Primary - always available)
-                            NODE_PORT=\$(kubectl get svc hotel-booking-system -n ${K8S_NAMESPACE} -o jsonpath='{.spec.ports[0].nodePort}')
-                            NODE_URL="http://${CLUSTER_IP}:\${NODE_PORT}"
-                            
-                            # Get LoadBalancer details
-                            LB_IP=\$(kubectl get svc hotel-booking-system -n ${K8S_NAMESPACE} -o jsonpath='{.status.loadBalancer.ingress[0].ip}' 2>/dev/null || echo "")
-                            LB_HOST=\$(kubectl get svc hotel-booking-system -n ${K8S_NAMESPACE} -o jsonpath='{.status.loadBalancer.ingress[0].hostname}' 2>/dev/null || echo "")
-                            
-                            # Get Ingress URL
-                            INGRESS_HOST=\$(kubectl get ingress hotel-booking-ingress -n ${K8S_NAMESPACE} -o jsonpath='{.status.loadBalancer.ingress[0].hostname}' 2>/dev/null || echo "")
-                            
-                            echo ""
-                            echo "🌐 APPLICATION ACCESS URLs:"
-                            echo "------------------------------------------"
-                            
-                            # Always use NodePort as primary
-                            echo "🎯 PRIMARY URL (NodePort - Guaranteed Access):"
-                            echo "   \${NODE_URL}/"
-                            echo "   Health: \${NODE_URL}/actuator/health"
-                            echo "   Swagger: \${NODE_URL}/swagger-ui.html"
-                            
-                            if [ -n "\$LB_IP" ]; then
-                                echo ""
-                                echo "🚀 LOAD BALANCER URL (IP):"
-                                echo "   http://\${LB_IP}/"
-                            elif [ -n "\$LB_HOST" ]; then
-                                echo ""
-                                echo "🚀 LOAD BALANCER URL (Hostname):"
-                                echo "   http://\${LB_HOST}/"
-                            else
-                                echo ""
-                                echo "⚠️  LoadBalancer: Not available (using internal IP)"
-                            fi
-                            
-                            if [ -n "\$INGRESS_HOST" ]; then
-                                echo ""
-                                echo "🌐 INGRESS URL:"
-                                echo "   http://\${INGRESS_HOST}/"
-                            else
-                                echo ""
-                                echo "⚠️  Ingress: Not available"
-                            fi
-                            
-                            echo ""
-                            echo "📊 DEPLOYMENT STATUS:"
-                            echo "------------------------------------------"
-                            kubectl get deployments -n ${K8S_NAMESPACE} -o wide
-                            
-                            echo ""
-                            echo "🔧 SERVICES:"
-                            echo "------------------------------------------"
-                            kubectl get svc -n ${K8S_NAMESPACE} -o wide
-                            
-                            echo ""
-                            echo "🐳 PODS:"
-                            echo "------------------------------------------"
-                            kubectl get pods -n ${K8S_NAMESPACE} -o wide --show-labels
-                            
-                            echo ""
-                            echo "📈 INGRESS:"
-                            echo "------------------------------------------"
-                            kubectl get ingress -n ${K8S_NAMESPACE} 2>/dev/null || echo "Ingress not available"
-                            
-                            echo ""
-                            echo "✅ DEPLOYMENT SUMMARY:"
-                            echo "------------------------------------------"
-                            echo "Application: ${APP_NAME}"
-                            echo "Version: ${VERSION}"
-                            echo "Active Deployment: ${env.TARGET_DEPLOYMENT}"
-                            echo "Docker Image: ${REGISTRY}/${APP_NAME}:${VERSION}"
-                            echo "Namespace: ${K8S_NAMESPACE}"
-                            echo "Build: ${env.BUILD_NUMBER}"
-                            
-                            # Final application test on NodePort
-                            echo ""
-                            echo "🧪 FINAL APPLICATION TEST"
-                            echo "------------------------------------------"
-                            echo "Testing application at: \${NODE_URL}"
-                            for i in 1 2 3 4 5; do
-                                if curl -f -s "\${NODE_URL}/actuator/health" > /dev/null; then
-                                    echo "✅ Application is responding correctly on NodePort"
-                                    break
-                                else
-                                    echo "⏳ Attempt \$i: Application not responding, waiting 5s..."
-                                    sleep 5
-                                    if [ \$i -eq 5 ]; then
-                                        echo "❌ Application failed to respond after 5 attempts"
-                                        echo "Checking pod status..."
-                                        kubectl get pods -n ${K8S_NAMESPACE}
-                                        kubectl logs -n ${K8S_NAMESPACE} -l app=hotel-booking-system --tail=20
-                                    fi
-                                fi
-                            done
-                            
-                            # Write URLs to file for email notification
-                            echo "PRIMARY_URL=\${NODE_URL}/" > deployment-urls.txt
-                            echo "NODEPORT_URL=\${NODE_URL}/" >> deployment-urls.txt
-                            
-                            if [ -n "\$LB_IP" ]; then
-                                echo "LB_URL=http://\${LB_IP}/" >> deployment-urls.txt
-                            elif [ -n "\$LB_HOST" ]; then
-                                echo "LB_URL=http://\${LB_HOST}/" >> deployment-urls.txt
-                            else
-                                echo "LB_URL=Not available" >> deployment-urls.txt
-                            fi
-                            
-                            if [ -n "\$INGRESS_HOST" ]; then
-                                echo "INGRESS_URL=http://\${INGRESS_HOST}/" >> deployment-urls.txt
-                            else
-                                echo "INGRESS_URL=Not available" >> deployment-urls.txt
-                            fi
-                        """
-                        
-                        // Read URLs from file
-                        script {
-                            def primaryUrl = "http://${CLUSTER_IP}:32189/"
-                            def lbUrl = "Not available"
-                            def ingressUrl = "Not available"
-                            def nodeportUrl = "http://${CLUSTER_IP}:32189/"
-                            
-                            if (fileExists('deployment-urls.txt')) {
-                                def urlFile = readFile('deployment-urls.txt')
-                                def lines = urlFile.split('\n')
-                                lines.each { line ->
-                                    if (line.startsWith('PRIMARY_URL=')) {
-                                        primaryUrl = line.substring('PRIMARY_URL='.length())
-                                    }
-                                    if (line.startsWith('LB_URL=')) {
-                                        lbUrl = line.substring('LB_URL='.length())
-                                    }
-                                    if (line.startsWith('INGRESS_URL=')) {
-                                        ingressUrl = line.substring('INGRESS_URL='.length())
-                                    }
-                                    if (line.startsWith('NODEPORT_URL=')) {
-                                        nodeportUrl = line.substring('NODEPORT_URL='.length())
-                                    }
-                                }
-                            }
-                            
-                            env.DEPLOYMENT_URL = primaryUrl
-                            env.LB_URL = lbUrl
-                            env.INGRESS_URL = ingressUrl
-                            env.NODEPORT_URL = nodeportUrl
-                            
-                            echo "📧 Final URLs for notification:"
-                            echo "Primary: ${env.DEPLOYMENT_URL}"
-                            echo "NodePort: ${env.NODEPORT_URL}"
-                            echo "LoadBalancer: ${env.LB_URL}"
-                            echo "Ingress: ${env.INGRESS_URL}"
-                        }
-                    }
+                    // Wait for application
+                    sh """
+                    echo "⏳ Waiting for application pods to be ready..."
+                    for i in {1..30}; do
+                        if kubectl get pods -n ${K8S_NAMESPACE} -l app=hotel-booking | grep -q Running; then
+                            echo "✅ Application pods are ready!"
+                            break
+                        fi
+                        echo "⏱️ Waiting for application pods... (attempt \$i/30)"
+                        sleep 10
+                    done
+                    
+                    sleep 30
+                    """
+                    
+                    // Health check
+                    sh """
+                    # Get service details
+                    echo "=== Kubernetes Deployment Status ==="
+                    kubectl get svc -n ${K8S_NAMESPACE}
+                    kubectl get pods -n ${K8S_NAMESPACE}
+                    
+                    # Simple health check using port-forward
+                    timeout 60s kubectl port-forward svc/hotel-booking-service 8080:8080 -n ${K8S_NAMESPACE} &
+                    sleep 10
+                    
+                    if curl -f http://localhost:8080/actuator/health; then
+                        echo "✅ Health check passed!"
+                        pkill -f "kubectl port-forward"
+                    else
+                        echo "❌ Health check failed!"
+                        pkill -f "kubectl port-forward"
+                        exit 1
+                    fi
+                    """
                 }
             }
         }
@@ -559,79 +344,84 @@ pipeline {
     
     post {
         always {
+            echo "📋 Pipeline execution completed!"
+            
+            // Publish reports
+            publishHTML([
+                allowMissing: true,
+                alwaysLinkToLastBuild: true,
+                keepAll: true,
+                reportDir: '.',
+                reportFiles: 'trivy-security-report.html',
+                reportName: 'Trivy Security Report'
+            ])
+            
+            // Cleanup
             sh """
-                echo "🏁 Build Process Completed"
-                echo "Build Status: ${currentBuild.result}"
-                echo "Build Number: ${VERSION}"
-                echo "Deployment: ${env.TARGET_DEPLOYMENT ?: 'N/A'}"
-                echo "Primary URL: ${env.DEPLOYMENT_URL ?: 'N/A'}"
+            docker rmi ${DOCKER_NAMESPACE}/${APP_NAME}:${APP_VERSION} || true
+            docker rmi ${DOCKER_NAMESPACE}/${APP_NAME}:latest || true
             """
             cleanWs()
         }
         success {
-            echo "🎉 Blue-Green Deployment completed successfully!"
-            script {
-                currentBuild.description = "SUCCESS - v${VERSION} (${env.TARGET_DEPLOYMENT})"
+            echo "🎉 Pipeline executed successfully!"
+            
+            sh """
+            echo "=== DEPLOYMENT SUCCESS ==="
+            echo "Application: ${APP_NAME}"
+            echo "Version: ${APP_VERSION}"
+            echo "Docker Image: ${DOCKER_NAMESPACE}/${APP_NAME}:${APP_VERSION}"
+            echo "Kubernetes Namespace: ${K8S_NAMESPACE}"
+            echo "Build URL: ${BUILD_URL}"
+            """
+            
+            emailext (
+                subject: "SUCCESS: Pipeline '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
+                body: """
+                🎉 CICD Pipeline Completed Successfully!
                 
-                emailext (
-                    subject: "SUCCESS: Hotel Booking System #${env.BUILD_NUMBER}",
-                    body: """
-                    🎉 BLUE-GREEN DEPLOYMENT COMPLETED SUCCESSFULLY!
-
-                    📋 Deployment Details:
-                    • Application: ${APP_NAME}
-                    • Version: ${VERSION}
-                    • Environment: ${env.TARGET_DEPLOYMENT}
-                    • Docker Image: ${REGISTRY}/${APP_NAME}:${VERSION}
-                    • Namespace: ${K8S_NAMESPACE}
-                    • Build: ${env.BUILD_NUMBER}
-
-                    🌐 ACCESS URLs:
-                    • 🎯 PRIMARY URL: ${env.DEPLOYMENT_URL}
-                    • 🔗 NodePort: ${env.NODEPORT_URL}
-                    • 🚀 LoadBalancer: ${env.LB_URL}
-                    • 🌐 Ingress: ${env.INGRESS_URL}
-
-                    🔗 Quick Links:
-                    • Application: ${env.DEPLOYMENT_URL}
-                    • Health Check: ${env.DEPLOYMENT_URL}actuator/health
-                    • Swagger UI: ${env.DEPLOYMENT_URL}swagger-ui.html
-
-                    📊 Build Information:
-                    • Build URL: ${env.BUILD_URL}
-                    • Git Branch: ${env.GIT_BRANCH}
-
-                    The application has been deployed using Blue-Green strategy.
-                    Use the PRIMARY URL for guaranteed access.
-                    """,
-                    to: "mesaifudheenpv@gmail.com",
-                    attachLog: false
-                )
-            }
+                Application: Hotel Booking System
+                Build Number: ${env.BUILD_NUMBER}
+                Version: ${APP_VERSION}
+                
+                📊 Deployment Information:
+                - Docker Image: ${DOCKER_NAMESPACE}/${APP_NAME}:${APP_VERSION}
+                - Kubernetes Namespace: ${K8S_NAMESPACE}
+                - Build URL: ${env.BUILD_URL}
+                
+                🔗 Useful Links:
+                - Jenkins: http://${JENKINS_URL}:8080
+                - SonarQube: http://${SONARQUBE_URL}:9000
+                - Nexus: http://${NEXUS_URL}:8081
+                - Docker Hub: https://hub.docker.com/r/${DOCKER_NAMESPACE}/${APP_NAME}
+                
+                Next: Perform smoke tests and monitor application metrics.
+                """,
+                to: "mesaifudheenpv@gmail.com"
+            )
         }
         failure {
             echo "❌ Pipeline failed!"
-            script {
-                currentBuild.description = "FAILED - v${VERSION}"
+            
+            emailext (
+                subject: "FAILED: Pipeline '${env.JOB_NAME} [${env.BUILD_NUMBER}]'",
+                body: """
+                ❌ CICD Pipeline Failed!
                 
-                emailext (
-                    subject: "FAILED: Hotel Booking System #${env.BUILD_NUMBER}",
-                    body: """
-                    ❌ DEPLOYMENT FAILED!
-
-                    Application: ${APP_NAME}
-                    Version: ${VERSION}
-                    Target Deployment: ${env.TARGET_DEPLOYMENT ?: 'N/A'}
-
-                    Please check the Jenkins build logs for details:
-                    ${env.BUILD_URL}
-
-                    Immediate attention required.
-                    """,
-                    to: "mesaifudheenpv@gmail.com",
-                    attachLog: true
-                )
-            }
+                Application: Hotel Booking System
+                Build Number: ${env.BUILD_NUMBER}
+                
+                Please check the Jenkins console output for details:
+                ${env.BUILD_URL}
+                
+                Common issues:
+                - Unit test failures
+                - SonarQube quality gate failure
+                - Docker build issues
+                - Kubernetes deployment errors
+                """,
+                to: "mesaifudheenpv@gmail.com"
+            )
         }
     }
 }
